@@ -1,3 +1,8 @@
+2012-11-22  Ian Bolton  <ian.bolton@arm.com>
+
+	* gcc.target/aarch64/builtin-bswap-1.c: New test.
+	* gcc.target/aarch64/builtin-bswap-2.c: New test.
+
 2012-11-22  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/55432
