@@ -1,3 +1,7 @@
+2012-11-22  Ian Bolton  <ian.bolton@arm.com>
+
+	* config/aarch64/aarch64.md (bswaphi2): New pattern.
+
 2012-11-22  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR sanitizer/55379
